--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="Toolsified is your hub for simple, smart, and free online tools – starting with time zone converters. More to come." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 <link rel="stylesheet" href="style.css" />
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
