--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-adsense-account" content="ca-pub-6293439009227714">
   <title>Toolsified – Smart tools for everyday tasks</title>
   <meta name="description" content="Toolsified is your hub for simple, smart, and free online tools – starting with time zone converters. More to come." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
