--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
  <title>Multi Time Zone Converter – Compare world clocks</title>
 <meta name="description" content="See the current time in multiple time zones, add or remove cities, and easily compare times. Great for meetings." />
-
+<meta name="google-adsense-account" content="ca-pub-6293439009227714">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdn.jsdelivr.net/npm/luxon@3/build/global/luxon.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css" />
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="container">
