--- a/time-code.html
+++ b/time-code.html
@@ -3,7 +3,7 @@
 <head>
 <title>Time-code Converter – Convert EDT, PST, CEST and more</title>
 <meta name="description" content="Paste a time like '2pm EDT' and get local time instantly. Great for scheduling across time zones." />
-
+<meta name="google-adsense-account" content="ca-pub-6293439009227714">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Time‑code Converter</title>
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 
 <link rel="stylesheet" href="style.css" />
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
+     crossorigin="anonymous"></script>
  
 </head>
 <body>
