--- a/currency.html
+++ b/currency.html
@@ -7,6 +7,7 @@
   <title>Currency Converter – Toolsified</title>
   <meta name="description" content="Convert currencies instantly with live exchange rates. Smart, fast and free currency tool from Toolsified." />
   <link rel="stylesheet" href="style.css" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" as="style" onload="this.rel='stylesheet'">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
      crossorigin="anonymous"></script>
