--- a/currency.html
+++ b/currency.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
      crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
   <style>
     .swap-btn {
       padding: 10px 16px;
@@ -48,6 +48,7 @@
     <div id="result" style="margin-top: 24px; font-size: 1.25rem; font-weight: 600;"></div>
     <div id="lastUpdated" style="margin-top: 12px; font-size: 0.95rem; color: #555;"></div>
   </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" defer></script>
 
   <script>
     const currencies = [
