--- a/currency.html
+++ b/currency.html
@@ -7,8 +7,8 @@
   <title>Currency Converter – Toolsified</title>
   <meta name="description" content="Convert currencies instantly with live exchange rates. Smart, fast and free currency tool from Toolsified." />
   <link rel="stylesheet" href="style.css" />
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" as="style" onload="this.rel='stylesheet'">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+ <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap"></noscript>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6293439009227714"
      crossorigin="anonymous"></script>
 
