--- a/index.html
+++ b/index.html
@@ -15,17 +15,29 @@
      crossorigin="anonymous"></script>
 </head>
 <body>
-  <div class="container">
+    <!-- Header -->
+  <div data-include="header.html"></div>
+  <!-- Main Content -->
+  <main class="container">
     <h1>Welcome to Toolsified</h1>
     <p>Smart, fast and free tools – right in your browser. No clutter. No sign-ups.</p>
 
     <div class="tool-list">
       <a href="time-code.html" class="tool">🕒 Time-code Converter</a>
       <a href="multi-timezone.html" class="tool">🌍 Multi Time Zone Converter</a>
-<a href="currency.html" class="tool">💱 Currency Converter</a>
-
+      <a href="currency.html" class="tool">💱 Currency Converter</a>
       <!-- Add more tools here later -->
     </div>
-  </div>
+  </main>
+   <div data-include="footer.html"></div>
+
+  <script>
+    // Simple include loader
+    document.querySelectorAll('[data-include]').forEach(el => {
+      fetch(el.getAttribute('data-include'))
+        .then(res => res.text())
+        .then(html => el.innerHTML = html);
+    });
+  </script>
 </body>
 </html>
