--- a/header.html
+++ b/header.html
@@ -1,5 +1,6 @@
-<header style="text-align: center; padding: 24px 0">
-  <a href="index.html">
-    <img src="logo.png" alt="Toolsified logo" height="48" style="vertical-align: middle;" />
+<header style="text-align: center; padding-top: 24px;">
+  <a href="/" aria-label="Toolsified home">
+    <img src="logo.png" alt="Toolsified logo" style="max-height: 72px; width: auto;" />
   </a>
 </header>
+
