--- a/header.html
+++ b/header.html
@@ -1,6 +1,7 @@
-<header style="text-align: center; padding-top: 24px;">
-  <a href="/" aria-label="Toolsified home">
-    <img src="logo.png" alt="Toolsified logo" style="max-height: 72px; width: auto;" />
+<header class="site-header">
+  <a href="index.html">
+    <img src="logo.png" alt="Toolsified logo" class="logo" />
   </a>
 </header>
+
 
