--- a/header.html
+++ b/header.html
@@ -1,7 +1,10 @@
 <header class="site-header">
-  <a href="index.html">
-    <img src="logo.png" alt="Toolsified logo" class="logo" />
-  </a>
+  <div class="logo-container">
+    <a href="index.html">
+      <img src="logo.png" alt="Toolsified logo" class="logo" />
+    </a>
+  </div>
 </header>
+
 
 
