--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -19,7 +19,7 @@
   <div data-include="header.html"></div>
   <!-- Main Content -->
   <main>
-  <div class="container">
+  <div class="card">
     <h1>Multi Time Zone Converter</h1>
     
 
