--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,11 +37,9 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" id="showMatrix">
-      Show differences between all time zones
-    </label>
+  <div class="row" style="margin-top: 24px; align-items: center;">
+    <input type="checkbox" id="showDiffs" style="margin-right: 8px;" />
+    <label for="showDiffs">Show differences between all time zones</label>
   </div>
 
   <button onclick="showAll()" class="primary">Show all times</button>
