--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,10 +37,13 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-  <div class="row" style="margin-top: 24px; align-items: center;">
-    <input type="checkbox" id="showDiffs" style="margin-right: 8px;" />
-    <label for="showDiffs">Show differences between all time zones</label>
-  </div>
+ <div style="margin-top: 24px;">
+  <label style="display: flex; align-items: center; gap: 8px; font-weight: 500;">
+    <input type="checkbox" id="showDiffs" />
+    Show differences between all time zones
+  </label>
+</div>
+
 
   <button onclick="showAll()" class="primary">Show all times</button>
 
