--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,12 +37,13 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
- <div style="margin-top: 24px;">
-  <label style="display: flex; align-items: center; gap: 8px; font-weight: 500;">
+<div style="margin-top: 24px;">
+  <label for="showDiffs" style="display: flex; align-items: center; gap: 12px; font-weight: 500;">
     <input type="checkbox" id="showDiffs" />
-    Show differences between all time zones
+    <span>Show differences between all time zones</span>
   </label>
 </div>
+
 
 
   <button onclick="showAll()" class="primary">Show all times</button>
