--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,12 +37,13 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-<div style="margin-top: 24px;">
-  <label for="showDiffs" style="display: flex; align-items: center; gap: 12px; font-weight: 500;">
-    <input type="checkbox" id="showDiffs" />
-    <span>Show differences between all time zones</span>
+<div style="margin: 24px 0;">
+  <label for="showDiffs" style="display: inline-flex; align-items: center; gap: 8px; font-weight: 600;">
+    <input type="checkbox" id="showDiffs" style="transform: scale(1.1);" />
+    Show differences between all time zones
   </label>
 </div>
+
 
 
 
