--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -18,7 +18,7 @@
       <!-- Header -->
   <div data-include="header.html"></div>
   <!-- Main Content -->
-  <main>
+  <main><div class="container">
   <div class="card">
     <h1>Multi Time Zone Converter</h1>
     
@@ -61,7 +61,7 @@
   </table>
 
   <div id="matrixTitle" style="display:none;">Difference other time zones</div>
-  <div id="matrixWrapper" style="overflow-x: auto; display:none;"></div>
+  <div id="matrixWrapper" style="overflow-x: auto; display:none;"></div></div>
   </main>
        <div data-include="footer.html"></div>
 
