--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -38,7 +38,7 @@
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
 <div style="margin: 24px 0;">
-  <label for="showDiffs" style="display: inline-flex; align-items: center; gap: 8px; font-weight: 600;">
+  <label>
     <input type="checkbox" id="showDiffs" style="transform: scale(1.1);" />
     Show differences between all time zones
   </label>
