--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,12 +37,13 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-<div style="margin: 24px 0;">
-  <label>
-    <input type="checkbox" id="showDiffs" style="transform: scale(1.1);" />
+<div class="form-group">
+  <label class="checkbox-label">
+    <input type="checkbox" id="showDiffs" />
     Show differences between all time zones
   </label>
 </div>
+
 
 
 
