--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,12 +37,11 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-<div class="form-group">
-  <label class="checkbox-label">
-    <input type="checkbox" id="showDiffs" />
-    Show differences between all time zones
-  </label>
-</div>
+<label style="display: inline-flex; align-items: center; gap: 0.5em;">
+  <input type="checkbox" />
+  Show differences between all time zones
+</label>
+
 
 
 
