--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,7 +37,7 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-<label style="display: flex; align-items: center; gap: 0.5em; width: 100%;">
+<label style="display: inline-flex; align-items: center; gap: 0.5em; width: 100%;">
   <input type="checkbox" />
   Show differences between all time zones
 </label>
