--- a/multi-timezone.html
+++ b/multi-timezone.html
@@ -37,11 +37,10 @@
 
   <button onclick="addTimeZone()" class="primary">Add time zone</button>
 
-<label style="display: inline-flex; align-items: center; gap: 0.5em; width: 100%;">
-  <input type="checkbox" />
+<label for="all" style="display: inline-flex; align-items: center; gap: 0.5em; width: 100%;">
   Show differences between all time zones
 </label>
-
+<input id="all" type="checkbox" />
 
 
 
